# window_processor

./: CMakeLists.txt  controller.cpp  controller.h  fileedit.cpp  fileedit.h  filterselectionwindow.cpp  filterselectionwindow.h  filterselectionwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  windowdatatablemodel.cpp  windowdatatablemodel.h
